--- a/Ohmyfoodindex.css
+++ b/Ohmyfoodindex.css
@@ -4,9 +4,6 @@
 body, html{
 	margin: 0 auto;
 	padding: 0;
-	width: 360px;
-	height: 1640px;
-	box-shadow: 0px 0px 10px black
 
 }
 .page{
@@ -23,6 +20,48 @@ body, html{
     margin-top: 15px;
 	
 }
-.imagerestaurant{
-	height: 60px;
+
+
+.restaurantLink{
+	width: 90%;
+	height: 300px;
+	margin: 30px auto;
+	border-radius: 10px;
+	box-shadow: 0 0 5px silver;
+	display: block;
+	position: relative;
+}
+.restaurantLink > img{
+	width: 100%;
+	height: 200px;
+	object-fit: cover;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+.restaurantLink > div {
+	display: flex;
+	justify-content: space-between;
+}
+.newRestaurant {
+	display: block;
+	text-align: center;
+	height: 25px;
+	width: 150px;
+	position: absolute;
+	top:10px;
+	right: 10px;
+	background: green;
+}
+input{
+	background-color: #9356DC;
+	display: block;
+	border-radius: 20px;
+	color: white;
+	padding: 10px;
+
+}
+.name{
+	font-weight: bold;
+	color: black;
+	text-decoration:none;
 }
