--- a/Ohmyfoodindex.css
+++ b/Ohmyfoodindex.css
@@ -2,15 +2,17 @@
 	
 }
 body, html{
-	margin: 0 auto;
+	margin: 0;
 	padding: 0;
 
 }
 .page{
 	
 	width: 100%;
-	height: 100%;}
-
+	}
+.logo{
+	width: 100%;
+}
 .logo>img{
 	height: 100%;
 	width: 50%;
@@ -30,6 +32,7 @@ body, html{
 	box-shadow: 0 0 5px silver;
 	display: block;
 	position: relative;
+	text-decoration: none;
 }
 .restaurantLink > img{
 	width: 100%;
@@ -53,15 +56,33 @@ body, html{
 	background: green;
 }
 input{
-	background-color: #9356DC;
 	display: block;
 	border-radius: 20px;
 	color: white;
 	padding: 10px;
+	background: linear-gradient(#FF79DA , #9356DC);
+	border:none;
+	margin: 0 auto;
 
 }
 .name{
 	font-weight: bold;
 	color: black;
-	text-decoration:none;
+
+}
+.lienrestaurants{
+	width: 100%;
+}
+.Restaurant{
+	width: 100%;
+}
+footer{
+	width: 100%;
+
+}
+footer>img {
+	width: 30%;
+}
+.hautdelapage{
+	width: 100%;
 }
