--- a/Ohmyfoodindex.css
+++ b/Ohmyfoodindex.css
@@ -21,17 +21,18 @@ body, html{
     margin-left: auto;
     margin-right: auto;
     margin-top: 15px;
+    margin-bottom: 15px;
 	
 }
 
 .GPS{
 	background-color: #E6E9EE;
-	box-shadow: inset 5px 15px 5px -10px gray; 
+	box-shadow: inset 5px 15px 5px -10px #c0c0c0; 
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	font-weight: bold;
-	
+
 }
 
 
@@ -44,12 +45,18 @@ body, html{
 	align-items: center;
 	padding-top: 30px;
 	padding-bottom: 50px;
+
 }
 .reservegras{
 	font-weight: bold;
 	font-size: 30px;
+	text-align: center;
+	margin-bottom: 1px;
+	margin-top: 15px;
+
 
 }
+
 .decouverte{
 	text-align: center;
 	font-size: 25px;
@@ -68,6 +75,7 @@ body, html{
 .titrefonctionnement{
 	font-weight: bold;
 	padding-left: 20px;
+	font-size: 25px;
 	
 }
 .blocfonctionnement{
@@ -75,6 +83,8 @@ body, html{
 	box-shadow: 0 0 5px silver;
 	display: flex;
 	flex-direction: row;
+	margin: 20px;
+	box-shadow: 0px 8px 7px #c0c0c0;
 
 }
 .textblocfonctionnement{
@@ -133,4 +143,16 @@ footer>img {
 }
 .hautdelapage{
 	width: 100%;
+}
+.newRestaurant{
+	padding-top: 5px;
+	background-color: #99E2D0;
+	color: green;
+	font-weight: bold;
+	border-radius: 5px;
+
+}
+.titrerestaurant{
+	font-weight: bold;
+	font-size: 25px;
 }
