--- a/Ohmyfoodindex.css
+++ b/Ohmyfoodindex.css
@@ -5,6 +5,7 @@
 body, html{
 	margin: 0;
 	padding: 0;
+	font-family: Roboto;
 
 }
 .page{
@@ -85,10 +86,28 @@ body, html{
 	flex-direction: row;
 	margin: 20px;
 	box-shadow: 0px 8px 7px #c0c0c0;
+	position: relative;
 
 }
 .textblocfonctionnement{
 	font-weight: bold;
+}
+.fonctionnementnombre{
+	position: absolute;
+	top: 50%;
+	background-color: #9356DC;
+	color: white;
+	height: 25px;
+	width: 25px;
+	border-radius: 50%;
+	transform: translate(-50%,-50%);
+	text-align: center;
+	line-height: 25px;
+
+}
+.restaurantLink{
+	text-decoration: none;
+	color: black;
 }
 .restaurantLink > img{
 	width: 100%;
@@ -155,4 +174,5 @@ footer>img {
 .titrerestaurant{
 	font-weight: bold;
 	font-size: 25px;
+	padding-left: 20px;
 }
