--- a/Ohmyfoodindex.css
+++ b/Ohmyfoodindex.css
@@ -143,6 +143,10 @@ body, html{
 	padding-right: 20px;
 	font-size: 30px;
 }
+
+.coeur :hover{
+	background-color: #9356DC;
+}
 .newRestaurant {
 	display: block;
 	text-align: center;
@@ -191,6 +195,7 @@ footer{
 	
 	padding-top: 30px;
 	padding-bottom: 30px;
+	padding-left: 20px;
 
 }
 footer>img {
@@ -218,3 +223,4 @@ footer>img {
 	width: 100%;
 	height: 200px;
 }
+
