--- a/pagesrestaurants.css
+++ b/pagesrestaurants.css
@@ -2,6 +2,10 @@
 	font-family: "Roboto";
   	src: url("Roboto-Regular.ttf");
 }
+@font-face{
+	font-family: "Shrikhand-Regular";
+  	src: url("Shrikhand-Regular.ttf");
+}
 body, html{
 	margin: 0;
 	padding: 0;
@@ -50,6 +54,42 @@ body, html{
 }
 .titre>p{
 	font-weight: bold;
+	font-family: "Shrikhand-Regular"
+}
+.conteneurcoeur{
+	
+	position: relative;
+	height: 50px;
+	width: 50px;
+
+}
+.coeur{
+	display: block;
+	font-size: 30px;
+	position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    opacity: 0;
+    transition: 0.3s;
+    background: -webkit-linear-gradient(#9356DC, #FF79DA );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+   
+}
+.coeur:hover{
+	opacity: 1;
+}
+.coeur:hover ~ .coeur2 {
+	opacity: 0;
+}
+.coeur2{
+	font-size: 30px;
+	position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    display: block;
 }
 .contenermenu{
 	z-index: 10px;
@@ -59,25 +99,118 @@ body, html{
 	margin-top: 150px;
 	border-radius: 20px;
 }
+.titrestyledeplat{
+	padding-left: 20px;
+}
+.trait{
+	height: 3px;
+	width: 45px;
+	background-color:#CDDC39;
+
+}
 .lesplats{
 	background-color: white;
+	border-radius: 20px;
+	box-shadow: 0 0 5px silver;
+	display: flex;
+	flex-direction: row;
+	margin: 20px;
+	box-shadow: 0px 8px 7px #c0c0c0;
+	position: relative;
+	height: 80px;
+	width: 90%;
+	overflow: hidden;
+}
+.prix{
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	transition: 1s;
+}
+.lesplats:hover > .prix{
+	transform: translateX(-100px);
+
 }
 .blocplats>p{
 	font-size: 1px;
 }
 .Plats{
 	font-weight: bold;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	width: 300px;
+	height: 20px;
+	display: inline-block;
+	background-color: blue;
+	overflow: hidden;
+	transition: 1s;
+
+}
+
+.lesplats:hover  .Plats{
+	width: 200px;
+	
+
 }
 footer{
 	width: 100%;
 	background-color: black;
 	color: white;
-	
+	display: flex;
+	justify-content: center;
 	padding-top: 30px;
 	padding-bottom: 30px;
-	padding-left: 20px;
 
+}
+.lienrestaurants{
+	width: 100%;
+}
+input{
+	display: block;
+	border-radius: 20px;
+	color: white;
+	padding: 10px;
+	background: linear-gradient(#FF79DA , #9356DC);
+	border:none;
+	margin: 0 auto;
 }
 footer>img {
 	width: 30%;
+}
+.basdepage{
+	width: 90%;
+}
+.hautdelapage{
+	width: 100%;
+}
+.carre{
+	height: 80px;
+	width: 100px;
+	background-color: pink;
+	position: absolute;
+	top: 0;
+	right: 0;
+	transform: translateX(100%);
+	transition: 1s;
+	display: flex;
+	justify-content: center;
+	font-size: 35px;
+	color: green;
+	align-items: center;
+	
+}
+.lesplats:hover > .carre{
+	transform: translateX(0%);
+}
+
+.carre>i{
+	transition: rotate(0deg);
+	transition: 1s;
+}
+.lesplats:hover > .carre >i{
+	transform: rotate(350deg);
+}
+
+.contenermenu{
+	padding-bottom: 50px;
 }
