--- a/pagesrestaurants.css
+++ b/pagesrestaurants.css
@@ -18,6 +18,7 @@ body, html{
 	}
 .logo{
 	width: 100%;
+
 }
 
 .logo>img{
@@ -33,14 +34,16 @@ body, html{
 .fleche{
 	position: absolute;
 	z-index: 10;
-	top:5px;
-	left: 5px;
+	top:20px;
+	left: 20px;
+	color: black;
+
 }
 .imagerestaurantdeux{
 	width: 100%;
 	height: 200px;
 	position: absolute;
-	top: 50px;
+	top: 65px;
 	left: 0px;
 	z-index: 0;
 }
@@ -101,6 +104,11 @@ body, html{
 }
 .titrestyledeplat{
 	padding-left: 20px;
+	margin-top: 40px;
+}
+.titrestyledeplat>p{
+	margin-bottom: 0px;
+
 }
 .trait{
 	height: 3px;
@@ -141,12 +149,27 @@ body, html{
 	width: 300px;
 	height: 20px;
 	display: inline-block;
-	background-color: blue;
+	background-color: white;
 	overflow: hidden;
 	transition: 1s;
+	margin-bottom: 0px;
 
 }
-
+.nomplats>p{
+	margin-top: 0px;
+	margin-bottom: 0px
+	display: inline-block;
+	background-color: white;
+	overflow: hidden;
+	transition: 1s;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+.nomplats{
+	margin-top: 15px;
+	margin-left: 10px;
+	margin-bottom: 0px;
+}
 .lesplats:hover  .Plats{
 	width: 200px;
 	
@@ -173,6 +196,7 @@ input{
 	background: linear-gradient(#FF79DA , #9356DC);
 	border:none;
 	margin: 0 auto;
+	margin-top: 50px;
 }
 footer>img {
 	width: 30%;
@@ -186,7 +210,7 @@ footer>img {
 .carre{
 	height: 80px;
 	width: 100px;
-	background-color: pink;
+	background-color: white;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -212,5 +236,5 @@ footer>img {
 }
 
 .contenermenu{
-	padding-bottom: 50px;
+	padding-bottom: 70px;
 }
