correction de bugs plus couleur

--- a/pagesrestaurants.css
+++ b/pagesrestaurants.css
@@ -57,7 +57,8 @@ body, html{
 }
 .titre>p{
 	font-weight: bold;
-	font-family: "Shrikhand-Regular"
+	font-family: "Shrikhand-Regular";
+	font-size:20px;
 }
 .conteneurcoeur{
 	
@@ -125,15 +126,17 @@ body, html{
 	margin: 20px;
 	box-shadow: 0px 8px 7px #c0c0c0;
 	position: relative;
-	height: 80px;
+	height: auto;
 	width: 90%;
 	overflow: hidden;
 }
 .prix{
 	position: absolute;
-	bottom: 10px;
-	right: 10px;
+	bottom: 12px;
+	right: 20px;
 	transition: 1s;
+	font-weight: bold;
+	color: grey;
 }
 .lesplats:hover > .prix{
 	transform: translateX(-100px);
@@ -147,33 +150,37 @@ body, html{
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	width: 300px;
-	height: 20px;
 	display: inline-block;
 	background-color: white;
 	overflow: hidden;
 	transition: 1s;
 	margin-bottom: 0px;
+	font-size: 18px;
+	margin: 0 0 3px 0;
 
 }
-.nomplats>p{
+.nomplats>.description{
 	margin-top: 0px;
-	margin-bottom: 0px
-	display: inline-block;
+	margin-bottom: 0px;
+	display: block;
 	background-color: white;
 	overflow: hidden;
 	transition: 1s;
 	white-space: nowrap;
 	text-overflow: ellipsis;
+	width: 300px;
 }
 .nomplats{
 	margin-top: 15px;
 	margin-left: 10px;
-	margin-bottom: 0px;
+	margin-bottom: 10px;
 }
 .lesplats:hover  .Plats{
-	width: 200px;
-	
+	width: 150px;
 
+}
+.lesplats:hover .description{
+	width: 150px;
 }
 footer{
 	width: 100%;
@@ -210,7 +217,7 @@ footer>img {
 .carre{
 	height: 80px;
 	width: 100px;
-	background-color: white;
+	background-color: #99E2D0;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -219,7 +226,7 @@ footer>img {
 	display: flex;
 	justify-content: center;
 	font-size: 35px;
-	color: green;
+	color: white;
 	align-items: center;
 	
 }
@@ -237,4 +244,8 @@ footer>img {
 
 .contenermenu{
 	padding-bottom: 70px;
+}
+.contact{
+	color: white;
+	text-decoration: none;
 }
