--- a/pagesrestaurants.css
+++ b/pagesrestaurants.css
@@ -53,12 +53,13 @@ body, html{
 	padding-top: 20px;
 	justify-content: space-between;
 	padding-right: 30px;
-	padding-left: 10px;
+	padding-left: 22px;
 }
 .titre>p{
 	font-weight: bold;
 	font-family: "Shrikhand-Regular";
-	font-size:20px;
+	font-size:30px;
+	margin-bottom: 0px;
 }
 .conteneurcoeur{
 	
@@ -99,9 +100,10 @@ body, html{
 	z-index: 10px;
 	position: relative;
 	width: 100%;
-	background-color: #E6E9EE;
-	margin-top: 150px;
-	border-radius: 20px;
+	background-color: #F5F5F5;
+	margin-top: 185px;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
 }
 .titrestyledeplat{
 	padding-left: 20px;
@@ -155,7 +157,7 @@ body, html{
 	overflow: hidden;
 	transition: 1s;
 	margin-bottom: 0px;
-	font-size: 18px;
+	font-size: 15px;
 	margin: 0 0 3px 0;
 
 }
@@ -169,6 +171,7 @@ body, html{
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	width: 300px;
+	font-size: 12px;
 }
 .nomplats{
 	margin-top: 15px;
@@ -194,8 +197,10 @@ footer{
 }
 .lienrestaurants{
 	width: 100%;
+
 }
 input{
+	width: 200px;
 	display: block;
 	border-radius: 20px;
 	color: white;
