correction taille et disposition

--- a/pagesrestaurants.css
+++ b/pagesrestaurants.css
@@ -36,7 +36,7 @@ body, html{
 	z-index: 10;
 	top:20px;
 	left: 20px;
-	color: black;
+	color: #2F4F4F;
 
 }
 .imagerestaurantdeux{
@@ -52,7 +52,7 @@ body, html{
 	flex-direction: row;
 	padding-top: 20px;
 	justify-content: space-between;
-	padding-right: 30px;
+	padding-right: 17px;
 	padding-left: 22px;
 }
 .titre>p{
@@ -66,6 +66,8 @@ body, html{
 	position: relative;
 	height: 50px;
 	width: 50px;
+	margin-top: 30px;
+
 
 }
 .coeur{
@@ -81,6 +83,7 @@ body, html{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
    
+   
 }
 .coeur:hover{
 	opacity: 1;
@@ -95,6 +98,7 @@ body, html{
     left: 0;
     opacity: 1;
     display: block;
+  
 }
 .contenermenu{
 	z-index: 10px;
@@ -116,7 +120,8 @@ body, html{
 .trait{
 	height: 3px;
 	width: 45px;
-	background-color:#CDDC39;
+	background-color:#99E2D0;
+	margin-top: 5px;
 
 }
 .lesplats{
@@ -138,7 +143,7 @@ body, html{
 	right: 20px;
 	transition: 1s;
 	font-weight: bold;
-	color: grey;
+	color: #2F4F4F;
 }
 .lesplats:hover > .prix{
 	transform: translateX(-100px);
@@ -171,7 +176,7 @@ body, html{
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	width: 300px;
-	font-size: 12px;
+	font-size: 14px;
 }
 .nomplats{
 	margin-top: 15px;
