--- a/Ohmyfoodindex.css
+++ b/Ohmyfoodindex.css
@@ -260,3 +260,84 @@ footer>img {
 	color: white;
 	text-decoration: none;
 }
+.tempsdechargement{
+	background-color: white;
+	width: 100%;
+	height: 100%;
+	opacity: 1;
+	position: fixed;
+	z-index: 1000;
+	top: 0;
+	animation: animeloader 3s forwards;
+
+}
+
+@keyframes animeloader {
+	0%{
+		opacity: 1;
+	}
+	70%{
+		opacity: 1;
+	}
+	99%{
+		width: 100%;
+		height: 100%;
+	}
+	100%{
+		opacity: 0;
+		width: 0%;
+		height: 0%;
+
+	}
+
+}
+:root {
+  --dimension: 100px;
+  --thickness: 4px;
+  --color: red;
+}
+
+@keyframes rotate {
+  to {transform: rotate(360deg);}
+}
+
+
+.arc {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+
+
+}
+
+.arc:before, .arc:after {
+  border-bottom: var(--thickness) solid var(--color);
+  border-left: var(--thickness) solid transparent;
+  border-radius: 50%;
+  border-right: var(--thickness) solid var(--color);
+  border-top: var(--thickness) solid var(--color);
+  bottom: 0;
+  box-sizing: border-box;
+  content: '';
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform-origin: center center;
+}
+
+.arc:before {
+  animation: rotate 1s ease-in-out infinite;
+  height: 100%;
+  width: 100%;
+}
+
+.arc:after {
+  animation: rotate 1s ease-in-out infinite reverse;
+  height: 50%;
+  width: 50%;
+}
