--- a/pagesrestaurants.css
+++ b/pagesrestaurants.css
@@ -134,9 +134,10 @@ body, html{
 	margin: 20px;
 	box-shadow: 0px 8px 7px #c0c0c0;
 	position: relative;
-	height: auto;
+	height: 70px;
 	width: 90%;
 	overflow: hidden;
+	transition: 0s;
 }
 .prix{
 	position: absolute;
@@ -159,11 +160,10 @@ body, html{
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	width: 300px;
-	display: inline-block;
+	display: block;
 	background-color: white;
 	overflow: hidden;
 	transition: 1s;
-	margin-bottom: 0px;
 	font-size: 15px;
 	margin: 0 0 3px 0;
 
@@ -261,4 +261,41 @@ footer>img {
 .contact{
 	color: white;
 	text-decoration: none;
+}
+
+@keyframes animationblocplats{
+	0%{
+		opacity: 0;
+		transform: translateY(25%);
+	}
+	100%{
+		opacity: 1;
+		transform: translateY(0%);
+	}
+
+}
+
+.styleplat{
+	opacity: 0;
+
+}
+.anime1{
+	animation-delay: 0s;
+	animation-name: animationblocplats;
+	animation-duration:1s;
+	animation-fill-mode: forwards;
+}
+.anime2{
+	animation-delay: 1s;
+	animation-name: animationblocplats;
+	animation-duration:1s;
+	animation-fill-mode: forwards;
+
+}
+.anime3{
+	animation-delay: 2s;
+	animation-name: animationblocplats;
+	animation-duration:1s;
+	animation-fill-mode: forwards;
+
 }
