--- a/pagesrestaurants.css
+++ b/pagesrestaurants.css
@@ -10,6 +10,7 @@ body, html{
 	margin: 0;
 	padding: 0;
 	font-family: Roboto;
+	
 
 }
 
@@ -303,4 +304,14 @@ footer>img {
 	animation-duration:1s;
 	animation-fill-mode: forwards;
 
+}
+
+@media screen and (min-width: 557px){
+
+	
+	.imagerestaurantdeux{
+		height: 250px;
+		top: 150px;
+	
+		
 }
